force-app/main/default/objects/Sold_Product__c/Sold_Product__c.object-meta.xml
<CustomObject>
    <label>Sold Product</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sold Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>