force-app/main/default/objects/Sold_Product__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <label>Product Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>