force-app/main/default/objects/Sold_Product__c/fields/Unit_price__c.field-meta.xml
<CustomField>
    <fullName>Unit_price__c</fullName>
    <formula>Product__r.Product_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>