force-app/main/default/objects/Sold_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Product__c</columns>
    <columns>Unit_price__c</columns>
    <columns>Quantity__c</columns>
    <columns>Sold_Date__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>